--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+API_BASE_URL="https://staging-biz.coinprofile.co/v3"
+
 FIREBASE_API_KEY="AIzaSyCyC7i4Pxi8qkNZY4lqeDDOU3G_CwB5Jr0"
 FIREBASE_AUTH_DOMAIN="withbloom-app.firebaseapp.com"
 FIREBASE_PROJECT_ID="withbloom-app"
