--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.5.1",
     "bootstrap": "^5.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
