--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
