--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "styled-jsx": "^5.1.2"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.7",
