--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.7",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "jest": "^29.7.0",
     "typescript": "^5"
   }
 }
