--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "styled-jsx": "^5.1.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.0",
+    "@testing-library/react": "^14.0.0",
     "@types/bootstrap": "^5.2.7",
     "@types/jest": "^29.5.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__react": "^10.2.0",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
