--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "styled-jsx": "^5.1.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/bootstrap": "^5.2.7",
     "@types/jest": "^29.5.5",
@@ -32,6 +35,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5"
