--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "styled-jsx": "^5.1.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.22.15",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/bootstrap": "^5.2.7",
