--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "next": "13.5.4",
     "react": "^18",
@@ -30,6 +31,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/testing-library__react": "^10.2.0",
+    "env-var": "^7.4.1",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "jest": "^29.7.0",
